web-infras/parser/tests/fixtures/babel/core/create-parenthesized-expressions/invalid-parenthesized-assignment-pattern/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,2)
1|({x}) = {x: 1};
 |^
